--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   font-family: "Cabin", sans-serif;
   font-size: 26px;
   font-weight: 400;
-  line-height: 1.68;
+  line-height: 138%;
   background: var(--color-grey);
   color: var(--color-white);
   padding: 12vw 0;
@@ -83,27 +83,27 @@ a[target="_blank"]:after {
 }
 
 h1, .headline > * {
-  font-size: 8vw;
+  font-size: 6vmax;
   font-weight: 700;
   line-height: normal;
 }
 
+/* 
   @media (min-width: 960px) {
     .headline > * {
       font-size: 6vw;
     }
   }
-
-
+*/
 
 h2 {
-  font-size: 6.25vw;
+  font-size: 4vmax;
   line-height: normal;
 }
 
   @media (min-width: 960px) {
     h2 {
-      font-size: 2.5rem;
+      font-size: 2.8vmax;
     }
   }
 
@@ -143,8 +143,11 @@ section.main {
 .split a,
 .work a,
 .soon div {
+  display: block;
   font-size: 6.25vw;
   line-height: normal;
+  margin-bottom: .3em;
+  text-decoration: none;
 }
 
   @media (min-width: 960px) {
@@ -180,9 +183,7 @@ section.main {
 }
 
 .work a {
-  display: block;
   color: var(--color-white);
-  text-decoration: none;
 }
 
 .work em {
