--- a/styles.css
+++ b/styles.css
@@ -1,219 +1,219 @@
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}img,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}td:not([align]),th:not([align]){text-align:left}
+@import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 
 /* Variables */
 
 :root {
-  --color-grey: #222222;
-  --color-white: #ffffff;
-  --color-purple: #9662fd;
-  --spacing-short: 3vw;
-  --spacing-medium: 6vw;
-  --spacing-wide: 12vw;
+  --color-dirt: #f4f4f2;
+  --color-dark: #222222;
+  --color-petrol: #004149;
+  --spacing-s: 1rem;
+  --spacing-m: 2rem;
+  --spacing-l: 3rem;
+  --spacing-page: 2rem;
 }
 
-/* Layout settings */
-
-body {
-  font-family: "Cabin", sans-serif;
-  font-size: 26px;
-  font-weight: 400;
-  line-height: 138%;
-  background: var(--color-grey);
-  color: var(--color-white);
-  padding: 12vw 0;
-}
-
-section {
-  display: grid;
-  grid-gap: var(--spacing-medium);
-  grid-template-columns: 1fr;
-  padding-bottom: var(--spacing-medium);
-  margin-left: var(--spacing-medium);
-  margin-right: var(--spacing-medium);
-  margin-bottom: var(--spacing-medium);
-}
-
-  @media (min-width: 960px) {
-    section {
-      margin-left: var(--spacing-wide);
-      margin-right: var(--spacing-wide);
-    }
+@media (min-width: 860px) {
+  :root {
+    --spacing-s: 2rem;
+    --spacing-m: 4rem;
+    --spacing-l: 5rem;
+    --spacing-page: 10vw;
   }
+}
 
-  @media (min-width: 960px) {
-    section.halves {
-      grid-template-columns: 1fr 1fr;
-    }
+@media (min-width: 1200px) {
+  :root {
+    --spacing-l: 6rem;
+    --spacing-page: 16vw;
   }
-
-  @media (min-width: 960px) {
-    section.thirds {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-  }
-
-section.short {
-  padding-bottom: 0;
-}
-
-.list {
-  padding-top: 1em;
-  border-top: 2px solid var(--color-white);
-}
-
-.list strong {
-  display: block;
-}
-
-.list strong + * {
-  margin-top: var(--spacing-short);
 }
 
 /* Basics */
 
-a:hover,
-a:active {
-  color: var(--color-purple);
+body {
+  padding-top: 10vw;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 20px;
+  font-size: clamp(100%, 1rem + 2vw, 20px);
+  font-weight: 400;
+  line-height: 154%;
+  background: var(--color-dirt);
+  color: var(--color-dark);
 }
 
-a:link,
-a:visited {
-  color: var(--color-purple);
+h1, h2 {
+  font-size: 80px;
+  font-size: clamp(100%, 1rem + 5vw, 80px);
+  font-weight: 600;
+  line-height: 120%;
 }
 
-a[target="_blank"]:after {
-  content: " ⇱";
-  font-size: .6em;
-  transform: rotate(90deg) translateX(-4px);
-  display: inline-block;
-  margin-left: .3em;
-}
-
-h1, .headline > * {
-  font-size: 5vmax;
-  font-weight: 700;
-  line-height: normal;
-}
-
-  @media (min-width: 960px) {
-    .headline > * {
-      font-size: 6vw;
-    }
-  }
-
-h2 {
-  font-size: 4vmax;
-  line-height: normal;
-}
-
-  @media (min-width: 960px) {
-    h2 {
-      font-size: 2.8vmax;
-    }
-  }
-
-strong {
-  font-weight: 700;
-}
-
-section.main {
-  border-bottom: 2px solid var(--color-white);
-}
-
-.experience li,
-.profile li {
-  margin-bottom: 1em;
-}
-
-.job .what {
-  font-weight: 700;
-}
-
-.picture {
-  margin-bottom: var(--spacing-medium);
-}
-
-.split ul {
-  display: grid;
-  grid-gap: var(--spacing-medium);
-  grid-template-columns: 1fr;
-}
-
-  @media (min-width: 960px) {
-    .split ul {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-
-.split a,
-.work a,
-.soon div {
+h2, h3, h4, h5, em {
   display: block;
-  font-size: 6.25vw;
-  line-height: normal;
-  margin-bottom: .3em;
-  text-decoration: none;
-}
-
-  @media (min-width: 960px) {
-    .split a,
-    .work a,
-    .soon div {
-      font-size: 2.5rem;
-    }
-  }
-
-.split span {
-  display: block;
-}
-
-.split li {
-  margin-bottom: 1em;
-}
-
-.work li {
-  background: var(--color-purple);
-  color: var(--color-white);
-  padding: var(--spacing-medium);
-  margin-bottom: var(--spacing-short);
-}
-
-  @media (min-width: 960px) {
-    .work li {
-      padding: var(--spacing-short);
-    }
-  }
-
-.work .soon {
-  opacity: .4;
-}
-
-.work .soon:hover,
-.work .soon:active {
-  cursor: not-allowed;
-}
-
-.work a {
-  color: var(--color-white);
-}
-
-.work em {
-  opacity: .5;
-  display: inline-block;
+  font-weight: 600;
   font-style: normal;
-  font-size: .6em;
-  color: var(--color-purple);
-  background: var(--color-white);
-  border-radius: .2em;
-  padding: .2em .4em;
 }
 
-.writing a {
+span {
+  display: block;
+}
+
+ol {
+  list-style: none;
+}
+
+/* Layout */
+
+main {
+  padding-left: var(--spacing-page);
+  padding-right: var(--spacing-page);
+}
+
+main > * {
+  padding-bottom: var(--spacing-l);
+}
+
+/* Wrapper holds columns */
+
+.wrapper{
+  overflow: hidden;
+}
+
+@media (min-width: 860px) {
+  .dual > * {
+    width: 50%;
+    float: left;
+  }
+
+  .triad > * {
+    width: 33%;
+    float: left;
+  }
+
+  .triad .large {
+    width: 66%;
+    float: left;
+  }
+}
+
+/* Columns have vertical rhythm */
+
+.wrapper > *:not(:last-child),
+.experience li:not(:last-child),
+.profile p:not(:last-child),
+.adplist p:not(:last-child),
+.writing li:not(:last-child) {
+  padding-bottom: var(--spacing-s);
+}
+
+  @media (min-width: 860px) {
+    .wrapper > *:not(:last-child) {
+      padding-bottom: 0;
+    }
+  }
+
+/* Block has top borders */
+
+@media (min-width: 860px) {
+  .block {
+    padding-right: var(--spacing-m);
+  }
+}
+
+.block h3 {
+  border-top: 2px solid var(--color-dark);
+  padding-top: 20px;
+  padding-bottom: var(--spacing-s);
+}
+
+/* Specifics */
+
+.inverted {
+  padding-top: var(--spacing-l);
+  padding-bottom: var(--spacing-s);
+  background: var(--color-petrol);
+  color: var(--color-dirt);
+}
+
+.inverted .large {
+  
+}
+
+.inverted a:link,
+.inverted a:visited {
+  color: var(--color-dirt);
+}
+
+.heading {
+  font-size: 34px;
+  font-size: clamp(100%, 1rem + 2vw, 34px);
+  line-height: 144%;
+}
+
+@media (min-width: 860px) {
+  .heading {
+    width: 66%;
+    padding-right: var(--spacing-s);
+  }
+}
+
+img.casual {
+  display: block;
+  width: 100%;
+  margin-bottom: var(--spacing-l);
+}
+
+.role {
+  font-weight: 600;
+}
+
+.experience li { position: relative }
+
+.experience li::before {
+  content: '';
+  position: absolute;
+  left: -22px;
+  top: 10px;
+  height: 40px;
+  width: 10px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.experience .contentful::before,
+.experience .sumup::before {
+  background-image: url('images/icons/link.svg');
+}
+
+.writing li {
+  position: relative;
+  padding-left: 30px;
+}
+
+.writing li a:link,
+.writing li a:visited {
+  /* color: blueviolet; */
   text-decoration: none;
 }
 
-.writing img {
-  display: inline-block;
-  width: .8em;
-  margin-right: .3em;
+@media (min-width: 860px) {
+  .writing li {
+    left: -30px;
+  }
 }
+
+.writing li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 3px;
+  height: 20px;
+  width: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.writing .uxplanet::before { background-image: url('images/icons/uxplanet.png') }
+.writing .uxcollective::before { background-image: url('images/icons/uxcollective.png') }
+.writing .contentful::before { background-image: url('images/icons/contentful.png') }
+
