--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,7 @@
 body {
   padding-top: 10vw;
   font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 20px;
-  font-size: clamp(100%, 1rem + 2vw, 20px);
+  font-size: 16px;
   font-weight: 400;
   line-height: 154%;
   background: var(--color-dirt);
@@ -42,203 +41,97 @@ body {
 }
 
 h1, h2 {
-  font-size: 80px;
-  font-size: clamp(100%, 1rem + 5vw, 80px);
-  font-weight: 600;
+  font-size: 2rem;
+  font-weight: 400;
   line-height: 120%;
 }
 
-h2, h3, h4, h5, em {
-  display: block;
+h1 em {
   font-weight: 600;
   font-style: normal;
 }
 
-span {
-  display: block;
-}
-
-ol {
-  list-style: none;
-}
-
-/* Layout */
-
-section {
+.wrapper {
+  max-width: 80rem;
   padding-left: var(--spacing-page);
   padding-right: var(--spacing-page);
+  margin: 1rem auto;
 }
 
-section > * {
-  padding-bottom: var(--spacing-l);
+header {
+  position: relative;
 }
 
-/* Wrapper holds columns */
+header img {
+  display: block;
+  width: 40vw;
+  margin: 0 auto 2rem;
+}
 
-.wrapper {
+section.wrapper {
   overflow: hidden;
 }
 
-@media (min-width: 860px) {
-  .dual > * {
+section.wrapper p {
+  margin-top: 1rem;
+}
+
+/* Breakpoints */
+
+@media (min-width: 660px) {
+
+  section.wrapper p {
     width: 50%;
     float: left;
-  }
-
-  .triad > * {
-    width: 33%;
-    float: left;
-  }
-
-  .triad .large {
-    width: 66%;
-    float: left;
+    padding-left: 0rem;
+    padding-right: 2rem;
   }
 }
-
-/* Columns have vertical rhythm */
-
-.wrapper > *:not(:last-child),
-.experience li:not(:last-child),
-.profile p:not(:last-child),
-.adplist p:not(:last-child),
-.writing li:not(:last-child) {
-  padding-bottom: var(--spacing-s);
-}
-
-  @media (min-width: 860px) {
-    .wrapper > *:not(:last-child) {
-      padding-bottom: 0;
-    }
-  }
-
-/* Block has top borders */
 
 @media (min-width: 860px) {
-  .block {
-    padding-right: var(--spacing-m);
+  h1 {
+    font-size: 4rem;
+    padding-left: 4rem;
+  }
+
+  section.wrapper {
+    margin-top: 4rem;
+  }
+
+  header img {
+    margin: 0;
+    width: 25rem;
+    position: absolute;
+    left: -6.5rem;
+    top: -5rem;
+    z-index: -1;
+    
   }
 }
 
-.block h3 {
-  border-top: 2px solid var(--color-dark);
-  padding-top: 20px;
-  padding-bottom: var(--spacing-s);
-}
+@media (min-width: 1100px) {
 
-/* Specifics */
-
-.inverted {
-  padding-top: var(--spacing-l);
-  padding-bottom: var(--spacing-s);
-  background: var(--color-petrol);
-  color: var(--color-dirt);
-}
-
-.inverted .large {
+  header img {
+    width: 30rem;
+  }
   
-}
+  h1 {
+    font-size: 4rem;
+    padding-left: 4rem;
+  }
+  
+  section.wrapper {
+    margin-top: 4rem;
+  }
 
-.inverted a:link,
-.inverted a:visited {
-  color: var(--color-dirt);
-}
-
-.heading {
-  font-size: 34px;
-  font-size: clamp(100%, 1rem + 2vw, 34px);
-  line-height: 144%;
-}
-
-@media (min-width: 860px) {
-  .heading {
-    width: 66%;
-    padding-right: var(--spacing-s);
+  section.wrapper p {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
 
-img.casual {
-  display: block;
-  width: 100%;
-  margin-bottom: var(--spacing-l);
-}
+/* Konami */
 
-.role {
-  font-weight: 500;
-}
-
-.experience li { position: relative }
-
-.experience li::before {
-  content: '';
-  position: absolute;
-  left: -22px;
-  top: 10px;
-  height: 40px;
-  width: 10px;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.experience .zalando::before,
-.experience .contentful::before,
-.experience .sumup::before {
-  background-image: url('images/icons/link.svg');
-}
-
-.writing li {
-  position: relative;
-  padding-left: 30px;
-}
-
-.writing em {
-  font-weight: 500;
-}
-
-.writing li a:link,
-.writing li a:visited {
-  color: var(--color-dark);
-  text-decoration: none;
-}
-
-@media (min-width: 860px) {
-  .writing li {
-    left: -30px;
-  }
-}
-
-.writing li::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 3px;
-  height: 20px;
-  width: 20px;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.writing .zalando::before { background-image: url('images/icons/zalando.png') }
-.writing .uxplanet::before { background-image: url('images/icons/uxplanet.png') }
-.writing .uxcollective::before { background-image: url('images/icons/uxcollective.png') }
-.writing .contentful::before { background-image: url('images/icons/contentful.png') }
-
-footer.wrapper {
-  overflow: hidden;
-  font-size: 80%;
-}
-
-footer img {
-  float: left;
-  display: inline-block;
-  margin-right: var(--spacing-s);
-  width: 4rem;
-  height: 4rem;
-  border-radius: 10px;
-  padding-bottom: 0px !important;
-}
-
-footer p {
-  max-width: 510px;
-  opacity: 0.4;
+body.konami {
+  background: yellow;
 }
