--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
 /* Basics */
 
 body {
-  padding-top: 6vw;
+  padding-top: 10vw;
   font-family: 'IBM Plex Sans', sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -53,10 +53,14 @@ a:active {
   color: var(--color-petrol);
 }
 
-h1 {
+h1, h2 {
   font-size: 2.4rem;
   font-weight: 400;
   line-height: 122%;
+}
+
+h2 {
+  margin-top: 2em;
 }
 
 h1 em {
@@ -87,61 +91,34 @@ nav {
 .name { justify-content: left }
 
 .name img {
-  width: 2rem;
+  width: 5rem;
   margin-right: .5rem;
 }
 
 /* Header */
 
 header.wrapper {
-  margin-top: 3rem;
-  margin-bottom: 2rem;
-}
-
-section {
-  padding-bottom: 4rem; 
-}
-
-section p {
   margin-top: 1rem;
-  line-height: 160%;
+  margin-bottom: 6rem;
 }
 
-section p em { font-style: normal }
+.e em {
+  font-style: normal;
+}
 
-section p em > span:nth-child(2) {
+.e em > span:nth-child(2) {
   display: none;
 }
 
 /* Breakpoints */
 
-@media (min-width: 760px) {
-  section {
-    margin-top: 4rem;
-    overflow: hidden;
-  }
-
-  section p {
-    width: 50%;
-    float: left;
-    padding-left: 0rem;
-    padding-right: 2rem;
-  }
-}
-
 @media (min-width: 960px) {
-  
-  header { position: relative }
 
   h1 {
     font-size: 4rem;
   }
-  
-  section {
-    margin-top: 4rem;
-  }
 
-  section p {
-    padding-right: 2rem;
+  h2 {
+    line-height: 138%;
   }
 }
