--- a/styles.css
+++ b/styles.css
@@ -53,13 +53,14 @@ a:active {
   color: var(--color-petrol);
 }
 
-h1, h2 {
+h1 {
   font-size: 2.4rem;
-  font-weight: 400;
   line-height: 122%;
 }
 
 h2 {
+  font-size: 1.6rem;
+  line-height: 146%;
   margin-top: 2em;
 }
 
@@ -119,6 +120,7 @@ header.wrapper {
   }
 
   h2 {
+    font-size: 2.4rem;
     line-height: 138%;
   }
 }
